Bug 1912414 Style updates
- Make comment public /portfolio/feedback.html: sits in the middle and
  doesn't have the correct class.
- Comment with attachment: size is still displayed and download icon
  doesn't have tooltip that includes file name and size.
- Objectionable content: When page seen in 'Shared by me' page, it's
  missing the 'Portfolio under review' markup.
- Plans: The word 'Template' is too small on the plans overview page.
- Plans: View page and also Edit: Remove red background for overdue plan
  item as well as the red from its heading.
- Plans: Edit on a page: The chevron on the task sits awkwardly.
- Mark a forum post as objectionable: The alert icon to the left of the
  profile icon of the post that you are reporting is missing.
- Once forum post has been reported, change the red text for 'Reported
  details' to black.
- Legal: Expanded item has the chevron in the wrong direction.
- Legal: The 'Last update' date moved to the bottom from the top right
  hand corner.
- Elasticsearch result page, journal entry is pushed to the left.
- Account settings in admin area: Calendar icon below last login sits
  outside of box.
- Skin: - heading within a text block uses the block heading font when
  it should not do that.
- Group's about page - under Group Portfolios heading, when a page/
  collection is a template, it has a button on the right to allow
  copying, tpl needs to be updated so it aligns to top of the
  list-group-item.
- Look into the btn-group-top responsiveness, too many overrides for
  specific pages, like comments remove button, it seems to require an
  extra pixel around md breakpoint, would like to clean this up.

behatnotneeded

(cherry picked from commit 6c312125d2df94d14e8c7dde2f05ba0a1098cc77)

--- a/htdocs/theme/raw/sass/features/_comment.scss
+++ b/htdocs/theme/raw/sass/features/_comment.scss
@@ -15,8 +15,12 @@
     .viewfooter &,
     .modal-docked.active &,
     .bt-peerassessment & {
-        .comment-content {
+        .comment-content,
+        .comment-privacy {
           padding-left: 2.875rem; // 46px;
+        }
+        .comment-privacy .btn.btn-link {
+            width: auto;
         }
 
         @include media-breakpoint-up(lg) {
